# exitcode

./: .ghci  .travis.yml  LICENCE  LICENSE  README.md  changelog.md  default.nix  exitcode.cabal  exitcode.nix  shell.nix
ci/: ci.nix  jobsets.json  jobsets.nix  release.nix
src/Control/: Exitcode.hs  Process.hs
src/Control/Process/: CmdSpec.hs  CreateProcess.hs  FD.hs  GroupID.hs  Handle.hs  Pid.hs  Process.hs  ProcessHandle.hs  StdStream.hs  UserID.hs
test/: Tests.hs
