-- documentation, see http://haskell.org/cabal/users-guide/

name:                exitcode
version:             0.1.0.0
synopsis:            Monad transformer for exit codes
-- description:
homepage:            https://github.com/qfpl/exitcode
license:             BSD3
license-file:        LICENSE
author:              QFPL
maintainer:          contact@qfpl.io
copyright:           Copyright (C) 2017 Queensland Functional Programming Lab (QFPL)
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Exitcode
  build-depends:       base >=4.9 && <4.10
                     , lens >=4.15 && <4.16
                     , semigroupoids >=5.1 && <5.3
                     , transformers >=0.5.4 && <5.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite             tests
  build-depends:       base >=4.9 && <4.10
                     , exitcode
                     , checkers >=0.4.6 && <0.5
                     , QuickCheck >=2.9.2 && <2.11
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
