-- documentation, see http://haskell.org/cabal/users-guide/

name:                exitcode
version:             0.1.0.0
synopsis:            Monad transformer for exit codes
-- description:
homepage:            https://github.com/qfpl/exitcode
license:             BSD3
license-file:        LICENSE
author:              QFPL
maintainer:          Queensland Functional Programming Lab oᴉ˙ldɟb@llǝʞsɐɥ
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
homepage:            https://github.com/qfpl/exitcode
bug-reports:         https://github.com/qfpl/exitcode/issues

source-repository   head
  type:             git
  location:         git@github.com:qfpl/exitcode.git

library
  exposed-modules:     Control.Exitcode
  build-depends:       base >=4.9 && <4.10
                     , lens >=4.15 && <4.16
                     , mtl >=2.2 && <2.3
                     , semigroupoids >=5.1 && <5.3
                     , transformers >=0.5.2 && <5.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite             tests
  build-depends:       QuickCheck >=2.9.2 && <2.11
                     , base >=4.9 && <4.10
                     , checkers >=0.4.6 && <0.5
                     , exitcode
                     , lens >=4.15 && <4.16
                     , tasty >=0.11 && <0.12
                     , tasty-hunit >=0.9 && <0.10
                     , tasty-quickcheck >=0.8.4 && <0.10
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
