-- documentation, see http://haskell.org/cabal/users-guide/

name:                exitcode
version:             0.1.0.0
synopsis:            Monad transformer for exit codes
description:       
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Monad transformer for exit codes
homepage:            https://github.com/qfpl/exitcode
license:             BSD3
license-file:        LICENSE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Control
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10
homepage:            https://github.com/qfpl/exitcode
bug-reports:         https://github.com/qfpl/exitcode/issues
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1

source-repository   head
  type:             git
  location:         git@github.com:qfpl/exitcode.git

library
  exposed-modules:     Control.Exitcode
  build-depends:       base >=4.8 && <4.11
                     , lens >=4.15 && <4.16
                     , mtl >=2.2 && <2.3
                     , semigroupoids >=5.1 && <5.3
                     , semigroups >=0.18 && <0.19
                     , transformers >=0.4.1 && <5.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite             tests
  build-depends:       base >=4.8 && <4.11
                     , checkers >=0.4.6 && <0.5
                     , exitcode
                     , hedgehog >=0.5 && <0.6
                     , lens >=4.15 && <4.16
                     , tasty >=0.11 && <0.12
                     , tasty-hunit >=0.9 && <0.10
                     , tasty-hedgehog >= 0.1 && <0.2
                     , transformers >=0.4.1 && <5.5
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
